@@ -2,12 +2,10 @@ package org.sinytra.connector.locator.filter;
 
 import com.mojang.datafixers.util.Pair;
 import com.mojang.logging.LogUtils;
-import cpw.mods.jarhandling.JarContents;
-import cpw.mods.jarhandling.JarContentsBuilder;
-import cpw.mods.jarhandling.SecureJar;
-import cpw.mods.modlauncher.Launcher;
-import cpw.mods.modlauncher.api.IModuleLayerManager;
-import cpw.mods.niofs.union.UnionPathFilter;
+import net.neoforged.fml.jarcontents.JarContents;
+import net.neoforged.fml.jarcontents.JarContents.FilteredPath;
+import net.neoforged.fml.jarcontents.JarContents.PathFilter;
+import net.neoforged.fml.jarmoduleinfo.JarModuleInfo;
 import net.neoforged.neoforgespi.locating.IModFile;
 import org.jetbrains.annotations.Nullable;
 import org.sinytra.connector.transformer.jar.FabricModFileMetadata;
@@ -15,74 +13,76 @@ import org.sinytra.connector.transformer.jar.JarTransformer.FabricModPath;
 import org.slf4j.Logger;
 
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Comparator;
-import java.util.HashMap;
-import java.util.HashSet;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import static org.sinytra.connector.transformer.transform.TransformerUtil.uncheck;
+
 public class SplitPackageMerger {
     private static final Logger LOGGER = LogUtils.getLogger();
-    private static final UnionPathFilter BASE_FILTER = (path, basePath) -> !path.startsWith("META-INF/versions");
+    private static final PathFilter BASE_FILTER = path -> !path.startsWith("META-INF/versions");
 
     /**
      * Detect and resolve split package conflicts in jars.
-     * Supplied paths must point to valid jars paths usable by {@link SecureJar}.
+     * Supplied paths must point to valid jars paths usable by {@link JarContents}.
      * @param paths jar paths to process
      * @return a list of adjusted jar paths
      */
-    public static List<FilteredModPath> mergeSplitPackages(List<FabricModPath> paths, Iterable<IModFile> existing, Collection<? super IModFile> ignoredModFiles) {
+    public static List<FilteredPaths> mergeSplitPackages(List<FabricModPath> paths, Iterable<IModFile> existing, Collection<? super IModFile> ignoredModFiles) {
         // Paths that don't contain conflicting jars
         List<FabricModPath> plainPaths = new ArrayList<>(paths);
         // Processed paths result
-        List<FilteredModPath> output = new ArrayList<>();
+        List<FilteredPaths> output = new ArrayList<>();
 
         // Package name -> list of jars that contain the package
-        Map<String, List<Pair<SecureJar, FabricModPath>>> pkgSources = new HashMap<>();
+        Map<String, List<Pair<JarContents, FabricModPath>>> pkgSources = new HashMap<>();
         for (FabricModPath modInfo : paths) {
-            SecureJar secureJar = SecureJar.from(modInfo.path());
-            for (String pkg : secureJar.moduleDataProvider().descriptor().packages()) {
-                pkgSources.computeIfAbsent(pkg, p -> new ArrayList<>()).add(Pair.of(secureJar, modInfo));
+            JarContents jar = uncheck(() -> JarContents.ofPath(modInfo.path()));
+            Collection<String> packages = JarModuleInfo.scanModulePackages(jar);
+            for (String pkg : packages) {
+                pkgSources.computeIfAbsent(pkg, _ -> new ArrayList<>())
+                    .add(Pair.of(jar, modInfo));
             }
         }
 
         // Find all jars that need merging
         // Keep track of the order jars were found in, for selecting package owners
-        List<SecureJar> jarOrder = new ArrayList<>();
+        List<JarContents> jarOrder = new ArrayList<>();
         // Map of packages that need merging and their sources
-        Map<String, List<Pair<SecureJar, FabricModPath>>> mergePkgs = new LinkedHashMap<>();
+        Map<String, List<Pair<JarContents, FabricModPath>>> mergePkgs = new LinkedHashMap<>();
         AtomicInteger totalJars = new AtomicInteger(0);
         pkgSources.forEach((pkg, sources) -> {
             if (sources.size() > 1) {
-                LOGGER.debug("Found split package {} in jars {}", pkg, sources.stream().map(info -> info.getFirst().name()).collect(Collectors.joining(",")));
+                String names = sources.stream()
+                    .map(info -> info.getFirst().getPrimaryPath().getFileName().toString())
+                    .collect(Collectors.joining(","));
+                LOGGER.debug("Found split package {} in jars {}", pkg, names);
+
                 sources.forEach(source -> {
                     if (plainPaths.remove(source.getSecond())) {
                         totalJars.getAndIncrement();
                     }
-                    mergePkgs.computeIfAbsent(pkg, p -> new ArrayList<>()).add(source);
+                    mergePkgs.computeIfAbsent(pkg, _ -> new ArrayList<>()).add(source);
                     jarOrder.add(source.getFirst());
                 });
             }
         });
-        LOGGER.debug("Found {} split packages across {} jars", mergePkgs.keySet().size(), totalJars.get());
+        LOGGER.debug("Found {} split packages across {} jars", mergePkgs.size(), totalJars.get());
 
         // Name -> Jar merge info
-        Map<String, JarMergeInfo> jarMap = new HashMap<>();
+        Map<Object, JarMergeInfo> jarMap = new HashMap<>();
         mergePkgs.forEach((pkg, sources) -> {
             // Sort sources in the order jars were discovered
             sources.sort(Comparator.comparingInt(p -> jarOrder.indexOf(p.getFirst())));
 
-            Pair<SecureJar, FabricModPath> pair = sources.get(0);
-            SecureJar candidate = pair.getFirst();
-            String name = candidate.name();
-            JarMergeInfo owner = jarMap.computeIfAbsent(name, str -> new JarMergeInfo(candidate, pair.getSecond().metadata()));
+            Pair<JarContents, FabricModPath> pair = sources.getFirst();
+            JarContents candidate = pair.getFirst();
+            JarMergeInfo owner = jarMap.computeIfAbsent(
+                getJarKey(candidate),
+                _ -> new JarMergeInfo(candidate.getPrimaryPath(), pair.getSecond().metadata())
+            );
             analyzeJar(jarMap, owner, sources.subList(1, sources.size()), pkg);
         });
 
@@ -90,26 +90,24 @@ public class SplitPackageMerger {
         Set<String> existingPackages = new HashSet<>();
         for (IModFile modFile : existing) {
             if (!ignoredModFiles.contains(modFile)) {
-                existingPackages.addAll(modFile.getSecureJar().moduleDataProvider().descriptor().packages());
+                Set<String> packages = JarModuleInfo.scanModulePackages(modFile.getContents());
+                existingPackages.addAll(packages);
             }
         }
-        Collection<IModuleLayerManager.Layer> layers = Set.of(IModuleLayerManager.Layer.BOOT, IModuleLayerManager.Layer.SERVICE);
-        IModuleLayerManager manager = Launcher.INSTANCE.findLayerManager().orElseThrow();
-        for (IModuleLayerManager.Layer layer : layers) {
-            manager.getLayer(layer).orElseThrow().modules().stream()
-                .flatMap(module -> module.getPackages().stream())
-                .forEach(existingPackages::add);
-        }
+
         // Remove existing classpath packages
         for (String pkg : existingPackages) {
-            List<Pair<SecureJar, FabricModPath>> list = pkgSources.get(pkg);
+            List<Pair<JarContents, FabricModPath>> list = pkgSources.get(pkg);
             if (list != null) {
-                for (Pair<SecureJar, FabricModPath> pair : list) {
-                    SecureJar jar = pair.getFirst();
+                for (Pair<JarContents, FabricModPath> pair : list) {
+                    JarContents jar = pair.getFirst();
                     FabricModPath modPath = pair.getSecond();
                     plainPaths.remove(modPath);
-                    JarMergeInfo info = jarMap.computeIfAbsent(jar.name(), str -> new JarMergeInfo(jar, modPath.metadata()));
-                    LOGGER.debug("Excluding existing package {} from jar {}", pkg, jar.name());
+                    JarMergeInfo info = jarMap.computeIfAbsent(
+                        getJarKey(jar),
+                        _ -> new JarMergeInfo(jar.getPrimaryPath(), modPath.metadata())
+                    );
+                    LOGGER.debug("Excluding existing package {} from jar {}", pkg, jar.getPrimaryPath());
                     info.excludedPackages().add(pkg);
                 }
             }
@@ -117,16 +115,21 @@ public class SplitPackageMerger {
 
         // Process gathered merge information
         jarMap.values().forEach(info -> {
-            Set<Path> additionalPaths = info.additionalPaths();
+            Set<FilteredPath> additionalPaths = info.additionalPaths();
             Set<String> excludedPackages = info.excludedPackages();
-            UnionPathFilter filter = !excludedPackages.isEmpty() ? new PackageTracker(Set.copyOf(excludedPackages)) : null;
-            Path[] jarPaths = Stream.concat(Stream.of(info.jar().getPrimaryPath()), additionalPaths.stream()).toArray(Path[]::new);
-            output.add(new FilteredModPath(jarPaths, mergeANDFilter(BASE_FILTER, filter), info.metadata));
+
+            PathFilter filter = !excludedPackages.isEmpty() ? new PackageTracker(Set.copyOf(excludedPackages)) : null;
+            Collection<FilteredPath> jarPaths = Stream.concat(
+                Stream.of(new FilteredPath(info.origin(), mergeANDFilter(BASE_FILTER, filter))),
+                additionalPaths.stream()
+            ).toList();
+            output.add(new FilteredPaths(jarPaths));
         });
 
         // Add unprocessed paths to output
         for (FabricModPath modPath : plainPaths) {
-            output.add(new FilteredModPath(new Path[] { modPath.path() }, BASE_FILTER, modPath.metadata()));
+            FilteredPath path = new FilteredPath(modPath.path(), BASE_FILTER);
+            output.add(new FilteredPaths(List.of(path)));
         }
         if (paths.size() != output.size()) {
             LOGGER.error("Expected {} paths, got {}", paths.size(), plainPaths.size());
@@ -144,16 +147,17 @@ public class SplitPackageMerger {
      * @param others the remaining package sources
      * @param pkg    the package to look filter out
      */
-    private static void analyzeJar(Map<String, JarMergeInfo> swap, JarMergeInfo master, List<Pair<SecureJar, FabricModPath>> others, String pkg) {
-        List<Path> additionalPaths = others.stream()
-            .flatMap(pair -> {
-                SecureJar sj = pair.getFirst();
+    private static void analyzeJar(Map<Object, JarMergeInfo> swap, JarMergeInfo master, List<Pair<JarContents, FabricModPath>> others, String pkg) {
+        List<FilteredPath> additionalPaths = others.stream()
+            .map(pair -> {
+                JarContents jar = pair.getFirst();
                 FabricModFileMetadata metadata = pair.getSecond().metadata();
-                JarContents jarContents = new JarContentsBuilder().paths(sj.getPrimaryPath()).pathFilter(singlePackageFilter(pkg)).build();
-                SecureJar singlePackage = SecureJar.from(jarContents);
-                JarMergeInfo jarInfo = swap.computeIfAbsent(sj.name(), name -> new JarMergeInfo(sj, metadata));
+
+                FilteredPath filteredPath = new FilteredPath(jar.getPrimaryPath(), singlePackageFilter(pkg));
+                JarMergeInfo jarInfo = swap.computeIfAbsent(getJarKey(jar), name -> new JarMergeInfo(jar.getPrimaryPath(), metadata));
                 jarInfo.excludedPackages().add(pkg);
-                return Stream.of(singlePackage.getRootPath());
+
+                return filteredPath;
             })
             .toList();
         master.additionalPaths().addAll(additionalPaths);
@@ -164,8 +168,8 @@ public class SplitPackageMerger {
      *
      * @param pkg the package to match
      */
-    private static UnionPathFilter singlePackageFilter(String pkg) {
-        return (path, basePath) -> {
+    private static PathFilter singlePackageFilter(String pkg) {
+        return path -> {
             int idx = path.lastIndexOf('/');
             // Match any resource in the jar root
             return path.equals("/")
@@ -176,22 +180,29 @@ public class SplitPackageMerger {
         };
     }
 
-    private static UnionPathFilter mergeANDFilter(UnionPathFilter left, @Nullable UnionPathFilter right) {
-        return (a, b) -> left.test(a, b) && (right == null || right.test(a, b));
+    private static PathFilter mergeANDFilter(PathFilter left, @Nullable PathFilter right) {
+        return a -> left.test(a) && (right == null || right.test(a));
+    }
+    
+    private static Object getJarKey(JarContents contents) {
+        if (contents.getContentRoots().size() == 1) {
+            return contents.getPrimaryPath();
+        }
+        return contents.getChecksum().orElseThrow(() -> new IllegalStateException("Cannot calculate jar key"));
     }
 
     /**
      * Keeps track of pending package merging modifications that should be done to a jar.
-     * @param jar the jar containing the package
+     * @param origin the origin primary path
      * @param metadata fabric mod metadata of the jar's mod
      * @param additionalPaths additional paths to include in the jar
      * @param excludedPackages packages to exlude from the jar
      */
-    private record JarMergeInfo(SecureJar jar, FabricModFileMetadata metadata, Set<Path> additionalPaths, Set<String> excludedPackages) {
-        public JarMergeInfo(SecureJar jar, FabricModFileMetadata metadata) {
-            this(jar, metadata, new HashSet<>(), new HashSet<>());
+    private record JarMergeInfo(Path origin, FabricModFileMetadata metadata, Set<FilteredPath> additionalPaths, Set<String> excludedPackages) {
+        public JarMergeInfo(Path origin, FabricModFileMetadata metadata) {
+            this(origin, metadata, new HashSet<>(), new HashSet<>());
         }
     }
 
-    public record FilteredModPath(Path[] paths, @Nullable UnionPathFilter filter, FabricModFileMetadata metadata) {}
+    public record FilteredPaths(Collection<FilteredPath> paths) {}
 }
